tests/whiley/invalid/test_89.wyal
define count_requires_0(int n) is:
    n > 0


define count_loopinvariant_23(int n, int i) is:
    (i >= 0) && (i <= n)


assert "loop invariant not restored":
    forall(int n, int i$3, int i, int i$2):
        if:
            count_requires_0(n)
            i == 1
            count_loopinvariant_23(n, i$2)
            i$2 < n
            i$3 == (i$2 - 1)
        then:
            count_loopinvariant_23(n, i$3)


